# Rd-H_synth

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml  release.yml
Source/: ParameterMapper.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/be/: AudioAnalyzer.cpp  AudioAnalyzer.h  PresetManager.h  SynthVoice.h
Source/be/dsp/: FMEngine.h  LFO.h  ModMatrix.h  NoiseGenerator.h  WaveTable.h
Source/fe/: AIMatchPanel.cpp  AIMatchPanel.h  CoolUiSkin.cpp  CoolUiSkin.h  SpectrumAnalyzerComponent.cpp  SpectrumAnalyzerComponent.h
Source/fe/gui/: BottomBar.h  RdhColors.h  TopBar.h
Source/fe/gui/modes/: AIModePanel.h  AdvancedModePanel.h  PerformanceModePanel.h  SimpleModePanel.h
guide/: architecture.md  building.md  development.md
render/: OfflineRenderer.cpp
site/: index.html
test_presets/: generate.py  test-4op-algo0-chain.rdhs  test-4op-algo1-parallel.rdhs  test-4op-algo2-2to1.rdhs  test-4op-algo3-additive.rdhs  test-brown.rdhs  test-fm-feedback.rdhs  test-pink.rdhs  test-white.rdhs
